@startuml

class Course {
name: String
instructors: Instructor[*]
textbooks: Textbook[*]
getName()
setName()
getInstructors()
addInstructor()
getTextbooks()
addTextbook()
printCourseInfo()
}

class Instructor{
firstName: String
lastName: String
officeNumber: String
getFirstName()
setFirstName()
getLastName()
setLastName()
getOfficeNumber()
setOfficeNumber()
}

class Textbook{
title: String
author: String
publisher: String
getTitle()
setTitle()
getAuthor()
setAuthor()
getPublisher()
setPublisher()
}

Course o-- Instructor
Course o-- Textbook

class Folder{
name: String
subFiles: File[*]
subFolders: Folder[*]

getName()
setName()
addSubFolder()
addSubFile()
getSubFolder()
getSubFile()
removeSubFolder()
removeSubFile()
printDirectory()
}

class File{
name: String
getName()
setName()
printNameInSubLevel()
}

Folder *-- File
Folder *-- Folder

class Employee{
firstName: String
lastName: String
ssid: String
getFirstName()
setFirstName()
getLastName()
setLastName()
getSSID()
setSSID()
getInfo()
printInfo()
}

class SalariedEmployee{
weekly_salary: double
getWeeklySalary()
setWeeklySalary()
getInfo()
}

class HourlyEmployee{
wage: double
hoursWorked: double
getWage()
setWage()
getHoursWorked()
setHoursWorked()
getInfo()
}

class CommisionEmployee{
commisionRate: double
grossSales: double
getCommisionRate()
setCommisionRate()
getGrossSales()
setGrossSales()
getInfo()
}

class BaseEmployee {
baseSalary: double
getBaseSalary()
setBaseSalary()
getInfo()
}

Employee <|-- SalariedEmployee
Employee <|-- HourlyEmployee
Employee <|-- CommisionEmployee
Employee <|-- BaseEmployee

class Ship {
name: String
yearBuilt: String
getName()
setName()
getYearBuilt()
setYearBuilt()
printInfo()
}

class Cruiseship{
maxPassengers: int
getMaxPassengers()
setMaxPassengers()
printInfo()
}

class Cargoship{
tonnage: int
getTonnage()
setTonnage()
printInfo()
}
Ship <|-- Cruiseship
Ship <|-- Cargoship

@enduml